# Boids

./: .gitignore  CMakeLists.txt  R2.cpp  README.md  b  boid.cpp  boid.hpp  flock.cpp  flock.hpp  main.cpp  render.cpp  render.hpp  test.cpp
include/: R2.hpp  boid.hpp  flock.hpp  r2.hpp  render.hpp
src/: R2.cpp  boid.cpp  flock.cpp  r2.cpp  render.cpp
test/: test.cpp
